# MAE541-final-project

./: .gitignore  Guide to final project.md  SPEC.md  Von Mises Drosophila Dual-Goal Dynamics.md
code/: .gitignore  README.md  pyproject.toml
code/notebooks/: 00_model_walkthrough.ipynb  01_steering_profiles.ipynb  02_pitchfork_bifurcation.ipynb  03_phase_portraits_hamiltonian.ipynb  04_homoclinic_orbits.ipynb  05_melnikov_analysis.ipynb  06_poincare_chaos.ipynb  07_topology_comparison.ipynb  08_discrete_neurons.ipynb  09_pfl2_indirect_pathway.ipynb  10_extensions.ipynb  _build_notebooks.py
code/scripts/: animate_fly.py  fig1_bifurcation.py  fig2_phase_portraits.py  fig3_melnikov.py  fig4_poincare_chaos.py  poincare_grid.py
code/src/steering/: __init__.py  integrator.py  nonlinearities.py  params.py  sweep.py
code/src/steering/analysis/: __init__.py  bifurcation.py  fixed_points.py  hamiltonian.py  homoclinic.py  lyapunov.py  melnikov.py  poincare.py
code/src/steering/dynamics/: __init__.py  acceleration.py  base.py  velocity.py
code/src/steering/models/: __init__.py  base.py  bessel.py  continuous.py  discrete.py  duffing.py  full_circuit.py
code/src/steering/utils/: bessel.py
code/src/steering/visualization/: __init__.py  bifurcation_plot.py  figures.py  phase_portrait.py  poincare_plot.py  profiles.py  style.py
code/tests/: conftest.py  test_bessel_coefficients.py  test_dynamics.py  test_limits.py  test_melnikov.py  test_models.py  test_symmetry.py  test_topology.py
report/: report.tex  report_submit.tex  steering.bib
(+5 files in other folders)
